--- a/Education.html
+++ b/Education.html
@@ -12,7 +12,7 @@
     <main>
          <div class="CLASSX">
             <u><h3 style="margin-bottom:0px">HIGH SCHOOL</h3></u>
-            <a href=="https://www.facebook.com/mjeckanpur/" target="_main"><img src="ll.jpg" alt="MJEC LOGO" height="65" ></a>
+            <a href="https://www.facebook.com/mjeckanpur/" target="_main"><img src="ll.jpg" alt="MJEC LOGO" height="65" ></a>
             <h4 style="margin:0px">MARY JESUS EDUCATION CENTRE</h4>
             <h5 style="margin:0px">AFFILIATED TO CISCE BOARD</h5>
             <h5 style="margin-top:0px">KANPUR (UTTAR-PRADESH)</h5>
@@ -21,7 +21,7 @@
         <hr>
           <div class="CLASSXII">
             <u><h3 style="margin-bottom:0px">INTERMEDIATE</h3></u>
-            <a href=="https://www.facebook.com/mjeckanpur/" target="_main"><img src="ll.jpg" alt="MJEC LOGO" height="65" ></a>
+            <a href="https://www.facebook.com/mjeckanpur/" target="_main"><img src="ll.jpg" alt="MJEC LOGO" height="65" ></a>
             <h4 style="margin:0px">MARY JESUS EDUCATION CENTRE</h4>
             <h5 style="margin:0px">AFFILIATED TO CISCE BOARD</h5>
             <h5 style="margin-top:0px">KANPUR (UTTAR-PRADESH)</h5>
@@ -30,7 +30,7 @@
         <hr>
           <div class="ENGINEERING">
             <u><h3 style="margin-bottom:0px">ENGINEERING</h3></u>
-            <a href=="http://mmmut.ac.in/" target="_main"><img src="llm.png" alt="MMMUT LOGO" height="65" ></a>
+            <a href="http://mmmut.ac.in/" target="_main"><img src="llm.png" alt="MMMUT LOGO" height="65" ></a>
             <h4 style="margin:0px">MADAN MOHAN MALAVIYA UNIVERSITY OF TECHNOLOGY</h4>
             <h5 style="margin-top:0px">GORAKHPUR (UTTAR-PRADESH)</h5>
             <b><h4>INFORMATION TECHNOLOGY'28</h4></b>
